{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 203,
  "lineage": "829e592b-ed32-3769-57fc-85ac4fc0831d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "terraform-ALB-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:450096721831:loadbalancer/app/terraform-ALB-1/1ac4d73b41aa8679",
            "arn_suffix": "app/terraform-ALB-1/1ac4d73b41aa8679",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-ALB-1-2097355316.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:450096721831:loadbalancer/app/terraform-ALB-1/1ac4d73b41aa8679",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-ALB-1",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0890fb36b941e50f8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00d45e98de7bcb4da"
              },
              {
                "subnet_id": "subnet-00e7aea81e393362a"
              }
            ],
            "subnets": [
              "subnet-00d45e98de7bcb4da",
              "subnet-00e7aea81e393362a"
            ],
            "tags": {
              "Name": "terraform-ALB"
            },
            "tags_all": {
              "Name": "terraform-ALB"
            },
            "vpc_id": "vpc-0619aa795d53cdbcc",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.terraform-ALB-sg",
            "aws_subnet.terraform-public-subnet-1",
            "aws_subnet.terraform-public-subnet-2",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eecb2324da1e17ae",
            "association_id": "eipassoc-0efb8ce33effbce4e",
            "domain": "vpc",
            "id": "eipalloc-0eecb2324da1e17ae",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-027c462bc1a6dca09",
            "private_dns": "ip-10-0-2-227.eu-west-2.compute.internal",
            "private_ip": "10.0.2.227",
            "public_dns": "ec2-18-170-124-142.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.170.124.142",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform-eip-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024ff306c2e72ffee",
            "association_id": "eipassoc-0c47a8bf15cfdbc5c",
            "domain": "vpc",
            "id": "eipalloc-024ff306c2e72ffee",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0ab48b56ece11cb0c",
            "private_dns": "ip-10-0-1-47.eu-west-2.compute.internal",
            "private_ip": "10.0.1.47",
            "public_dns": "ec2-13-42-252-140.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.42.252.140",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:450096721831:internet-gateway/igw-09e7ead6f4b23299c",
            "id": "igw-09e7ead6f4b23299c",
            "owner_id": "450096721831",
            "tags": {
              "Name": "terraform-igw"
            },
            "tags_all": {
              "Name": "terraform-igw"
            },
            "vpc_id": "vpc-0619aa795d53cdbcc"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "terraform-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:450096721831:listener/app/terraform-ALB-1/1ac4d73b41aa8679/51b7f1518cc202c0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:450096721831:targetgroup/terraform-TG/27ff6dcfe7c9c32b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:450096721831:listener/app/terraform-ALB-1/1ac4d73b41aa8679/51b7f1518cc202c0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:450096721831:loadbalancer/app/terraform-ALB-1/1ac4d73b41aa8679",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.terraform-ALB-1",
            "aws_lb_target_group.terraform-TG",
            "aws_security_group.terraform-ALB-sg",
            "aws_subnet.terraform-public-subnet-1",
            "aws_subnet.terraform-public-subnet-2",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "terraform-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:450096721831:targetgroup/terraform-TG/27ff6dcfe7c9c32b",
            "arn_suffix": "targetgroup/terraform-TG/27ff6dcfe7c9c32b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 124,
                "matcher": "200,302",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 119,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:450096721831:targetgroup/terraform-TG/27ff6dcfe7c9c32b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "terraform-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0619aa795d53cdbcc"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eecb2324da1e17ae",
            "association_id": "eipassoc-0efb8ce33effbce4e",
            "connectivity_type": "public",
            "id": "nat-091f82325e49caae1",
            "network_interface_id": "eni-027c462bc1a6dca09",
            "private_ip": "10.0.2.227",
            "public_ip": "18.170.124.142",
            "subnet_id": "subnet-00e7aea81e393362a",
            "tags": {
              "Name": "terraform-nat-gw"
            },
            "tags_all": {
              "Name": "terraform-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.terraform-eip",
            "aws_internet_gateway.terraform-igw",
            "aws_subnet.terraform-public-subnet-2",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform-nat-gw-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024ff306c2e72ffee",
            "association_id": "eipassoc-0c47a8bf15cfdbc5c",
            "connectivity_type": "public",
            "id": "nat-0257668d963d25bac",
            "network_interface_id": "eni-0ab48b56ece11cb0c",
            "private_ip": "10.0.1.47",
            "public_ip": "13.42.252.140",
            "subnet_id": "subnet-00d45e98de7bcb4da",
            "tags": {
              "Name": "terraform-nat-gw-2"
            },
            "tags_all": {
              "Name": "terraform-nat-gw-2"
            }
          },
          "dependencies": [
            "aws_eip.terraform-eip-2",
            "aws_internet_gateway.terraform-igw",
            "aws_subnet.terraform-public-subnet-1",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "terraform-nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:450096721831:network-acl/acl-052a9b78e9455843c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "id": "acl-052a9b78e9455843c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "450096721831",
            "subnet_ids": [],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0619aa795d53cdbcc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-private-rt-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:450096721831:route-table/rtb-0c9ce1a5c2fd2cbf8",
            "id": "rtb-0c9ce1a5c2fd2cbf8",
            "owner_id": "450096721831",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-091f82325e49caae1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-private-rt-1"
            },
            "tags_all": {
              "Name": "terraform-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0619aa795d53cdbcc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.terraform-nat-gw",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-private-rt-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:450096721831:route-table/rtb-0e230a4f732576d50",
            "id": "rtb-0e230a4f732576d50",
            "owner_id": "450096721831",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0257668d963d25bac",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-private-rt-2"
            },
            "tags_all": {
              "Name": "terraform-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0619aa795d53cdbcc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.terraform-nat-gw-2",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:450096721831:route-table/rtb-0d58e59128031904a",
            "id": "rtb-0d58e59128031904a",
            "owner_id": "450096721831",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09e7ead6f4b23299c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-public-rt"
            },
            "tags_all": {
              "Name": "terraform-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0619aa795d53cdbcc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-private-subnet-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08daccf17c8a18a3c",
            "route_table_id": "rtb-0c9ce1a5c2fd2cbf8",
            "subnet_id": "subnet-0bd253c7a22baafc2"
          },
          "dependencies": [
            "aws_eip.terraform-eip",
            "aws_internet_gateway.terraform-igw",
            "aws_nat_gateway.terraform-nat-gw",
            "aws_route_table.terraform-private-rt-1",
            "aws_subnet.terraform-private-subnet-1",
            "aws_subnet.terraform-public-subnet-2",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-private-subnet-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fb42acfbdc03ac1",
            "route_table_id": "rtb-0e230a4f732576d50",
            "subnet_id": "subnet-0be8691ce155fd256"
          },
          "dependencies": [
            "aws_eip.terraform-eip-2",
            "aws_internet_gateway.terraform-igw",
            "aws_nat_gateway.terraform-nat-gw-2",
            "aws_route_table.terraform-private-rt-2",
            "aws_subnet.terraform-private-subnet-2",
            "aws_subnet.terraform-public-subnet-1",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public-subnet-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fd716d3b1bcc10d",
            "route_table_id": "rtb-0d58e59128031904a",
            "subnet_id": "subnet-00d45e98de7bcb4da"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_route_table.terraform-public-rt",
            "aws_subnet.terraform-public-subnet-1",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public-subnet-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061d41029d4579886",
            "route_table_id": "rtb-0d58e59128031904a",
            "subnet_id": "subnet-00e7aea81e393362a"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_route_table.terraform-public-rt",
            "aws_subnet.terraform-public-subnet-2",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-ALB-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:450096721831:security-group/sg-0890fb36b941e50f8",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0890fb36b941e50f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-ALB-sg",
            "name_prefix": "",
            "owner_id": "450096721831",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-ALB-sg"
            },
            "tags_all": {
              "Name": "terraform-ALB-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0619aa795d53cdbcc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-RDS-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:450096721831:security-group/sg-087edfd034fbd8da9",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087edfd034fbd8da9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ssh from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04bc75602a4e57432"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-RDS-sg",
            "name_prefix": "",
            "owner_id": "450096721831",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-RDS-sg"
            },
            "tags_all": {
              "Name": "terraform-RDS-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0619aa795d53cdbcc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform-ALB-sg",
            "aws_security_group.terraform-bastion-sg",
            "aws_security_group.terraform-instance-sg",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:450096721831:security-group/sg-031fc4dea6f6dee37",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-031fc4dea6f6dee37",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-bastion-sg",
            "name_prefix": "",
            "owner_id": "450096721831",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-bastion-sg"
            },
            "tags_all": {
              "Name": "terraform-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0619aa795d53cdbcc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-instance-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:450096721831:security-group/sg-04bc75602a4e57432",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04bc75602a4e57432",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "http from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0890fb36b941e50f8"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-031fc4dea6f6dee37"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-instance-sg",
            "name_prefix": "",
            "owner_id": "450096721831",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-instance-sg"
            },
            "tags_all": {
              "Name": "terraform-instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0619aa795d53cdbcc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform-ALB-sg",
            "aws_security_group.terraform-bastion-sg",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:450096721831:subnet/subnet-0bd253c7a22baafc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd253c7a22baafc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450096721831",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-private-subnet-1"
            },
            "tags_all": {
              "Name": "terraform-private-subnet-1"
            },
            "vpc_id": "vpc-0619aa795d53cdbcc"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:450096721831:subnet/subnet-0be8691ce155fd256",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be8691ce155fd256",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "450096721831",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-private-subnet-2"
            },
            "tags_all": {
              "Name": "terraform-private-subnet-2"
            },
            "vpc_id": "vpc-0619aa795d53cdbcc"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:450096721831:subnet/subnet-00d45e98de7bcb4da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d45e98de7bcb4da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "450096721831",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-public-subnet-1"
            },
            "tags_all": {
              "Name": "terraform-public-subnet-1"
            },
            "vpc_id": "vpc-0619aa795d53cdbcc"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:450096721831:subnet/subnet-00e7aea81e393362a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e7aea81e393362a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "450096721831",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-public-subnet-2"
            },
            "tags_all": {
              "Name": "terraform-public-subnet-2"
            },
            "vpc_id": "vpc-0619aa795d53cdbcc"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:450096721831:vpc/vpc-0619aa795d53cdbcc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06b77d7f3aec92a09",
            "default_route_table_id": "rtb-016415639bae4f7fb",
            "default_security_group_id": "sg-05b677a4a52682cf5",
            "dhcp_options_id": "dopt-04f8764ac4bd4e152",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0619aa795d53cdbcc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-016415639bae4f7fb",
            "owner_id": "450096721831"
          }
        }
      ]
    }
  ]
}